fixed overflow on smaller screen

--- a/style.css
+++ b/style.css
@@ -49,6 +49,3 @@ body{
 .carousel-caption h5 {
     text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.7);
 }
-
-* {
-  outline: 1px solid red;}
